--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 overtitle: Made is a Jekyll theme
 title: For designers and web developers
-description: Show off your best work with this beautiful, minimal and customizable portfolio theme.
+description: Software development tips, tutorials, and unsolicited opinions
 featured_image: /images/social.jpg
 ---
 
@@ -11,20 +11,6 @@ featured_image: /images/social.jpg
 	{% if site.data.settings.hero_settings.background_image %}
 	<img src="{{ site.data.settings.hero_settings.background_image }}" class="hero__background" draggable="false">
 	{% endif %}
-
-	<section class="hero">
-		<div class="wrap grid">
-			<div class="title">
-				<p class="subtitle">{{ page.overtitle }}</p>
-				<h1>{{ page.title }}</h1>
-			</div>
-
-			<p class="intro subtitle--light">
-				{{ page.description }}
-				<a href="#" class="hero__cta button--fill contact-trigger js-contact">Get In Touch</a>
-			</p>
-		</div>
-	</section>
 
 	<section class="listing">
 		<div class="wrap">
