Fix title on index page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: default
-overtitle: Made is a Jekyll theme
-title: For designers and web developers
+title: Software development tips, tutorials, and unsolicited opinions
 description: Software development tips, tutorials, and unsolicited opinions
 featured_image: /images/social.jpg
 ---
