--- a/404.html
+++ b/404.html
@@ -2,12 +2,11 @@
 layout: default
 title: Page Not Found
 description: Sorry – the page your looking for doesn't exist.
-featured_image: /images/demo/about.jpg
 ---
 <div class="page-post">
 
 	<header class="post__header header--single">
-		
+
 		<div class="wrap">
 			<h1 class="post__title">Page not found</h1>
 		</div>
@@ -19,7 +18,8 @@ featured_image: /images/demo/about.jpg
 		<div class="wrap">
 
 			<article class="post__content {% if page.highlight_first %}highlight-first{% endif %}">
-				<p class="hero__text">Sorry – the page you're looking for doesn't exist. Perhaps you typed the URL incorrectly, or it may have moved.</p>
+				<p class="hero__text">Sorry – the page you're looking for doesn't exist. I'm just as shocked as you are.</p>
+				<img src="/images/profile.png" alt="Picture of me with a shocked facial expression" class="not_found__img" />
 				<p><a href="/" class="button--fill">Back To Home</a></p>
 			</article>
 
