--- a/projects/index.html
+++ b/projects/index.html
@@ -7,14 +7,10 @@ featured_image: /images/social.jpg
 
 <div class="page-home">
 
-	{% if site.data.settings.hero_settings.background_image %}
-	<img src="{{ site.data.settings.hero_settings.background_image }}" class="hero__background" draggable="false">
-	{% endif %}
-
 	<section class="listing">
 		<div class="wrap">
 
-			{% assign project = site.projects | last %}
+			{% for project in site.projects reversed %}
 
 			{% if project.accent_color %}{% capture accent_color %}{{ project.accent_color }}{% endcapture %}{% endif %}
 
@@ -36,10 +32,10 @@ featured_image: /images/social.jpg
 					</p>
 				</div>
 			</article>
+
+			{% endfor %}
 		</div>
 	</section>
-
-	{% include section__about.html %}
 
 	<section class="recent-posts">
 		<div class="wrap grid">
